--- a/src/lib/plugins/value/components/ReadonlyValue.scss
+++ b/src/lib/plugins/value/components/ReadonlyValue.scss
@@ -3,8 +3,7 @@
 
 // TODO: also share most of the following styling with EditableDiv
 .jse-value {
-  line-height: $line-height;
-  min-width: 16px;
+  min-width: 2em;
   padding: 0 $input-padding;
   box-sizing: border-box;
   outline: none;
