--- a/src/lib/components/modes/codemode/CodeMode.scss
+++ b/src/lib/components/modes/codemode/CodeMode.scss
@@ -25,7 +25,7 @@
       :global(.cm-scroller) {
         font-family: $font-family-mono;
         font-size: $font-size-mono;
-        line-height: 1.3em;
+        line-height: var(--jse-line-height);
         color: var(--jse-text-color);
       }
 
