--- a/src/lib/styles.scss
+++ b/src/lib/styles.scss
@@ -1,7 +1,6 @@
 $font-family: var(--jse-font-family);
 $font-size: var(--jse-font-size);
 $font-size-small: var(--jse-font-size-small);
-$font-size-smallest: var(--jse-font-size-smallest);
 
 $font-family-mono: var(--jse-font-family-mono) !default;
 $font-size-mono: var(--jse-font-size-mono);
@@ -42,11 +41,9 @@ $hovered-background-transparent: rgba(0, 0, 0, 0.06); // #f0f0f0, with transpare
 $background-gray: #f5f5f5;
 $background-light-gray-transparent: rgba(0, 0, 0, 0.06);
 $border-gray: #d8dbdf;
-$meta-color: var(--jse-meta-color);
+$meta-color: var(--jse-delimiter-color);
 $edit-border-color: $dark-gray;
 
-$line-height: 18px;
-$indentation-width: 18px; // IMPORTANT: keep in sync with js constant INDENTATION_WIDTH
 $menu-button-size: 32px;
 $pressed-button-margin: 2px;
 $input-padding: 5px;
@@ -61,8 +58,9 @@ $menu-padding: 5px;
 $bottom-height: 5px;
 $contents-padding: 2px;
 
-$context-menu-button-size: 18px;
 $errors-overview-max-height: 25%;
+
+$icon-font-size: 18px; // independent of the font-size of the text
 
 $box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.24);
 $outline-shadow: 0 0 10px 0 $theme-color-light;
