--- a/src/lib/components/modes/codemode/CodeMode.scss
+++ b/src/lib/components/modes/codemode/CodeMode.scss
@@ -10,6 +10,7 @@
   .contents {
     flex: 1;
     display: flex;
+    flex-direction: column;
     overflow: hidden;
     min-width: 0;
     min-height: 0;
