--- a/src/lib/components/modes/treemode/TreeMode.scss
+++ b/src/lib/components/modes/treemode/TreeMode.scss
@@ -76,3 +76,10 @@
     padding: 2px;
   }
 }
+
+// color picker styles
+:global(.picker_wrapper.popup),
+:global(.picker_wrapper.popup .picker_arrow::before),
+:global(.picker_wrapper.popup .picker_arrow::after) {
+  background: red !important; // FIXME
+}
