--- a/src/lib/themes/jse-theme-default.css
+++ b/src/lib/themes/jse-theme-default.css
@@ -26,6 +26,7 @@
   --jse-menu-color: #3883fa;
   --jse-menu-color-light: #5f9dff;
   --jse-menu-text-color: #fff;
+  --jse-modal-background: rgba(0, 0, 0, 0.3);
 
   /* navigation bar, gutter, search box */
   --jse-panel-background-color: #ebebeb;
