--- a/src/lib/plugins/value/components/ReadonlyValue.scss
+++ b/src/lib/plugins/value/components/ReadonlyValue.scss
@@ -15,7 +15,7 @@
   white-space: pre-wrap; // important for rendering multiple consecutive spaces
 
   &:hover {
-    background: $hovered-background-transparent;
+    background: var(--jse-hover-background-color);
   }
 
   &.jse-empty {
