--- a/src/lib/themes/jse-theme-dark.css
+++ b/src/lib/themes/jse-theme-dark.css
@@ -4,6 +4,7 @@
   --jse-text-color: #d4d4d4;
   --jse-selection-background-color: #464646;
   --jse-selection-background-dark-color: #343434;
+  --jse-hover-background-color: #343434;
   --jse-edit-outline: 2px solid #d4d4d4;
 
   /* main menu, modal header */
