--- a/src/lib/plugins/value/components/TimestampTag.scss
+++ b/src/lib/plugins/value/components/TimestampTag.scss
@@ -1,10 +1,9 @@
 @import '../../../styles';
 
 .jse-timestamp {
-  font-family: $font-family;
-  font-size: 10pt;
   padding: 0;
-  margin: 0 $padding-half 0 0;
+  margin: 0;
+  height: var(--jse-line-height);
 
   color: $red;
   border-radius: $border-radius;
