--- a/src/lib/themes/jse-theme-default.css
+++ b/src/lib/themes/jse-theme-default.css
@@ -11,17 +11,25 @@
   --jse-line-height: calc(1em + 4px);
   --jse-indent-size: calc(1em + 4px);
   --jse-color-picker-button-size: 1em;
-  --jse-context-menu-button-size: calc(1em + 4px);
 
   /* over all colors */
   --jse-background-color: #fff;
   --jse-text-color: #1a1a1a;
+  --jse-error-text-color: #ee5341;
   --jse-selection-background-color: #d3d3d3;
   --jse-selection-background-dark-color: #c2c2c2;
   --jse-selection-background-light-color: #e8e8e8;
   --jse-hover-background-color: rgba(0, 0, 0, 0.06);
   --jse-selection-inline-color: #656565;
   --jse-edit-outline: 2px solid #656565;
+
+  /* messages */
+  --jse-message-error-background: #ee5341;
+  --jse-message-error-color: #fff;
+  --jse-message-warning-background: #fdc539;
+  --jse-message-warning-color: #fff;
+  --jse-message-success-background: #9ac45d;
+  --jse-message-success-color: #fff;
 
   /* main menu, modal header */
   --jse-menu-color: #3883fa;
@@ -48,6 +56,7 @@
   --jse-context-menu-text-color: #fff;
   --jse-context-menu-text-color-disabled: #9d9d9d;
   --jse-context-menu-separator-color: #7a7a7a;
+  --jse-context-menu-button-size: calc(1em + 4px);
 
   /* json key and values */
   --jse-key-color: #1a1a1a;
