--- a/src/lib/components/modals/Modal.scss
+++ b/src/lib/components/modals/Modal.scss
@@ -21,7 +21,7 @@
   font-family: $font-family;
   font-size: $font-size;
   background: var(--jse-background-color);
-  color: var(--jse-text-color);
+  color: var(--jse-color);
 
   .jse-contents {
     padding: 20px;
